# ai-trading-platform

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  RUNNING_GUIDE.md  STARTUP_GUIDE.md  VERIFICATION_REPORT.md  cli.py  export_trades.py  manage_trading.sh  positions.html  pyproject.toml  railway.toml  requirements.txt  run_autonomous.py  run_autonomous_hybrid.py  run_autonomous_no_ai.py  run_trading.py  run_with_export.sh  update_json.py
ai_engine/: __init__.py  decision_maker.py  mcp_enhanced.py  mcp_scanner.py  mcp_tools.py  ml_engine.py  quant_analyzer.py  tax_tracker.py
backtesting/: __init__.py  backtester.py  portfolio.py  strategies.py  strategy.py
config/: logging_config.py  settings.py
dashboard/: app.py
dashboard/templates/: dashboard.html
data/: __init__.py
data/collectors/: __init__.py  alpaca_collector.py  yfinance_collector.py
data/ml_models/: SPY_rf_model.pkl  SPY_scaler.pkl
data/processors/: __init__.py  bar_processor.py
data/storage/: __init__.py  db.py  models.py  repositories.py
execution/: __init__.py  alpaca_trader.py  paper_trader.py  trading_logic.py
risk/: __init__.py  circuit_breaker.py  manager.py
scripts/: backfill_data.py  run_backtest.py  run_dashboard.sh  run_paper_trading.py  test_ai_decisions.py  test_full_system.py  test_risk.py
